# amazon_photos

./: .gitignore  cookies.json  pyproject.toml
amazon_photos/: _api.py  photos_sync.py
